--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "pages": [
+    "pages/input/input",
+    "pages/image/image",
+    "pages/view/view",
     "pages/button/button",
     "pages/text/text",
     "pages/home/home",
