--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    "pages/wxml/wxml",
+    "pages/scroll/scroll",
     "pages/input/input",
     "pages/image/image",
     "pages/view/view",
